--- a/styles/estiloFaceColor.css
+++ b/styles/estiloFaceColor.css
@@ -13,16 +13,15 @@
 	height : 480px;
 }
 
-#canvasSeguimiento {
-	position: absolute;
+#debug {
+	/*position: absolute;*/
 	top: 0px;
 	left: 0px;
 	-o-transform : scaleX(-1);
 	-webkit-transform : scaleX(-1);
 	transform : scaleX(-1);
 	-ms-filter : fliph; /*IE*/
-	filter : fliph; /*IE*/
-
+	filter : fliph; /*IE*/	
 	width : 640px;
 	height : 480px;
 }
